--- a/digito-ui/src/App.css
+++ b/digito-ui/src/App.css
@@ -90,38 +90,39 @@ footer a {
 
 @media only screen {
   .digit.draw {
-    height: 90vw;
-    width: 90vw;
-  }
-  .centred.drawing {
-    height: 91vw;
-    width: 91vw;
-  }
-  .drawing-column {
+    height: 100%;
     width: 100%;
-    margin-left: auto;
-    margin-right: auto;
-  }
-}
-
-@media only screen and (min-width: 308px) and (max-width: 1000px) {
-  .digit.draw {
-    height: 300px;
-    width: 300px;
   }
   .centred.drawing {
-    height: 300px;
-    width: 300px;
+    height: 80vw;
+    width: 100%;
     padding: 0 0 0 0;
   }
   .drawing-column {
-    width: 307px;
+    width: 96vw;
+    margin-left: 2vw;
+    margin-right: 2vw;
+  }
+}
+
+@media only screen and (min-width: 320px) and (max-height: 319px) {
+  .digit.draw {
+    height: 100%;
+    width: 100%;
+  }
+  .centred.drawing {
+    height: 80vh;
+    width: 80vh;
+    padding: 0 0 0 0;
+  }
+  .drawing-column {
+    width: 80vh;
     margin-left: auto;
     margin-right: auto;
   }
 }
 
-@media only screen and (min-width: 1001px) {
+@media only screen and (min-width: 320px) and (min-height: 320px) {
   .digit.draw {
     height: 300px;
     width: 300px;
